добавила показ описания кота(show)

--- a/style.css
+++ b/style.css
@@ -22,3 +22,10 @@ border-radius: 8px;
 .hidden {
     display: none;
 }
+/* 
+html {
+    background: url('https://mykaleidoscope.ru/x/uploads/posts/2022-09/1663128261_2-mykaleidoscope-ru-p-spokoinie-porodi-koshek-pinterest-2.jpg') no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
+  } */
