--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     align-items: center;
 }
 .custom-modal {
-background-color: white;
+background-color: rgb(241, 235, 235);
 display: flex;
 justify-content: center;
 padding: 12px;
@@ -22,10 +22,103 @@ border-radius: 8px;
 .hidden {
     display: none;
 }
-/* 
-html {
-    background: url('https://mykaleidoscope.ru/x/uploads/posts/2022-09/1663128261_2-mykaleidoscope-ru-p-spokoinie-porodi-koshek-pinterest-2.jpg') no-repeat;
-    background-position: center center;
-    background-size: cover;
-    background-attachment: fixed;
-  } */
+
+.text-center mb-5{
+/* margin-top: 10px; */
+margin-right: 65px;
+margin-bottom: 20px;
+margin-left: 70px;
+
+}
+
+body {
+    background-color: rgb(249, 216, 244);
+}
+
+.custom-modal  {
+background-color: rgb(249, 216, 244);
+}
+
+.btn.btn-success {
+background-color: rgb(234, 131, 218);
+border-color: rgb(234, 131, 218);
+border-radius: 60%;
+    font-family: sans-serif;
+    border: none;
+    border-radius: 25px;
+    padding: 15px 30px;
+    font-size: 15px;
+    cursor: pointer;
+    color: white;
+    box-shadow: 0px 4px 10px rgb(239 123 24 / 36%);
+    transition: background-color 0.2s;
+
+}
+.btn.btn-success:hover {
+    color:  rgb(234, 131, 218);;
+  background-color: white;
+}
+
+.text-center.mb-5 {
+    color: white;
+}
+
+.btn.btn-primary {
+    background-color: rgb(234, 131, 218);
+    border-color: rgb(234, 131, 218);
+    font-family: sans-serif;
+    border: none;
+    border-radius: 25px;
+    /* padding: 15px 30px; */
+    font-size: 15px;
+    cursor: pointer;
+    color: white;
+    box-shadow: 0px 4px 10px rgb(239 123 24 / 36%);
+    transition: background-color 0.2s;
+}
+.btn.btn-primary:hover {
+    color:  rgb(173, 33, 152);
+    background-color: white;
+}
+
+
+.btn.btn-danger {
+    background-color: rgb(173, 33, 152);
+    border-color:  rgb(173, 33, 152);
+    font-family: sans-serif;
+    border: none;
+    border-radius: 25px;
+    font-size: 15px;
+    cursor: pointer;
+    color: white;
+    box-shadow: 0px 4px 10px rgb(239 123 24 / 36%);
+    transition: background-color 0.2s;
+}
+.btn.btn-danger:hover {
+    color:  rgb(173, 33, 152);
+    background-color: white;
+}
+
+
+
+.modal-content{
+    background-color:rgb(249, 216, 244);
+}
+
+.btn.btn-secondary {
+    background-color:rgb(173, 33, 152);
+    border-color: rgb(173, 33, 152);
+}
+
+.card-img-top{
+    width: 100%;
+    height: 100%;
+    border-radius: 7%;
+    object-fit: cover;
+}
+
+.card {
+    border-radius: 7%;  
+    display: flex;
+    margin-right: 25px;
+}
